<resources>
    <string name="app_name">Vagtbytning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mathias Westergaard</string>
    <string name="nav_header_subtitle">Mathias.w@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_byttebørs">Byttebørs</string>
    <string name="menu_indboks">Indboks</string>
    <string name="menu_nødsituation">Nødsituation</string>
    <string name="menu_vagter">Vagter</string>
    <string name="menu_sygmelding">Syg og feriemelding</string>
    <string name="menu_løn">Løn og Highscore</string>
    <string name="menu_kurser">Kurser</string>
    <string name="menu_telefonbog">Telefonbog</string>
    <string name="menu_instillinger">Indstillinger</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">Login</string>

    // Ferie strings.
    <string name="ferie_headline">Ferie</string>
    <string name="ferie_fra">Fra</string>
    <string name="ferie_til">Til</string>

    // vagt strings
    <string name="VagtTidspunkt">Tidspunkt:</string>
    <string name="VagtDato">Dato:</string>

    //nød strings
    <string name="nødHeadlineo">Headline</string>
    <string name="nødText">Selve beskeden</string>
    <string name="nødknap1">Ja</string>
    <string name="nødknap2">lidt</string>
    <string name="nødknap3">nej</string>
    <string name="nødSpørgsmål">Kan du tage vagten eller lidt af den?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="nødsvarknap">Send</string>
    <string name="nødsvar">Hvor meget af vagten kan du tage?</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>